# minigest

./: .dockerignore  .editorconfig  .flake8  .gitignore  .isort.cfg  .pnp.js  .pre-commit-config.yaml  .prettierrc.js  CHANGELOG.md  CHANGELOG_old.md  Dockerfile  LICENSE  README.md  asset-manifest.json  collectclient.py  docker-compose.yaml  docker-compose.yml  index.html  lerna.json  make.bat  manage.py  package.json  precache-manifest.063816c5dfcdce9c8cefa2a334241728.js  precache-manifest.17d421b26e37b32c716eb0d24745946e.js  precache-manifest.3142b2751e9b622dc49517d48aaf29b9.js  precache-manifest.4311dd82a2e1826aca435cdb1f3724e6.js  precache-manifest.54f9198c06e5aa186416d3a6025eb481.js  precache-manifest.5dfbd5e101c00c9be982da65f780b5b4.js  precache-manifest.940b7e88be6b227456eb84d7951e48b1.js  precache-manifest.9c5f4c849c4d5c7839a482590980704e.js  precache-manifest.b0c5212229d8fa9f857315880be1d6e9.js  precache-manifest.b7b4a7c8b7b65d95df1391fbd55ad62a.js  precache-manifest.c793106086c7a4f7092a6c3f64599722.js  precache-manifest.d545508044b1f11e9769e6b137e0328f.js  pyproject.toml  requirements.txt  service-worker.js  setup.cfg
.github/workflows/: docker-publish.yml  docs.yml  pypipackage.yml  pypipublish.yml
anagrafica/: __init__.py  apps.py
anagrafica/admin/: __init__.py  impresa.py  persona_fisica.py  utente.py
anagrafica/forms/: __init__.py  utente.py
anagrafica/migrations/: 0001_initial.py  0002_domiciliofiscale_domiciliostabileorganizzazione_impresa_personafisica_soggettofiscale.py
anagrafica/models/: __init__.py  impresa.py  persona_fisica.py  soggetto_fiscale.py  utente.py
configs/: .env.docker
docfisc/: __init__.py  apps.py
docfisc/admin/: __init__.py  chiusura.py
docfisc/managers/: chiusura.py  docfisc.py
docfisc/migrations/: 0001_initial.py
docfisc/models/: __init__.py
docs/: api.rst  applicazioni.rst  conf.py  index.rst  inizia_subito.rst
docs/anagrafica/: index.rst
docs/dipendenze/: index.rst  postgres.rst  python.md  python.rst
docs/minigest/: utenti.md
minigest/: apps.py  asgi.py  settings.py  storage.py  urls.py  wsgi.py
minigest/account/: apps.py
minigest/anagrafica/: apps.py  urls_api.py
minigest/common/: apps.py
minigest/docfisc/: __init__.py  apps.py
minigest/fisco/: apps.py
minigest/negozi/: apps.py
minigest/pdf/: apps.py
minigest/rest/: apps.py  urls.py
minigest/settings/: __init__.py  docker.py  local.py
minigest/tributi/: apps.py
minigest/urls/: __init__.py  api.py
minigest/webclient/: __init__.py  apps.py  collectclient.py  craco.config.js  package.json  urls.py
minigest/www/: apps.py  urls.py
negozi/: __init__.py  apps.py
negozi/admin/: __init__.py  negozio.py
negozi/managers/: cassa.py
negozi/migrations/: 0001_initial.py
negozi/models/: cassa.py  negozio.py  orario.py  sede.py
pdf/: __init__.py  apps.py  urls.py
pdf/urls/: docfisc.py
pdf/views/: __init__.py  registro_corrispettivi.py
public/: .gitkeep
rest/: __init__.py  urls.py
rest/serializers/: __init__.py  domicilio_fiscale.py  fatturato.py  fisco.py  impresa.py  persona_fisica.py  utente.py
rest/viewsets/: __init__.py  domicilio_fiscale.py  fatturato.py  fisco.py  impresa.py  persona_fisica.py  soggetto_fiscale.py
static/css/: main.1ac77786.chunk.css  main.1ac77786.chunk.css.map
static/js/: 2.07dd904d.chunk.js  2.07dd904d.chunk.js.map  2.21241ebf.chunk.js  2.21241ebf.chunk.js.map  2.3be81cbb.chunk.js  2.3be81cbb.chunk.js.map  2.4b5bc979.chunk.js  2.4b5bc979.chunk.js.map  2.5d33351a.chunk.js  2.5d33351a.chunk.js.map  2.c40de47b.chunk.js  2.c40de47b.chunk.js.map  2.da6185cc.chunk.js  2.da6185cc.chunk.js.map  2.f2d81a2c.chunk.js.map  2.f5ead29d.chunk.js  2.f5ead29d.chunk.js.map  3.0e4cc2b5.chunk.js  3.0e4cc2b5.chunk.js.map  3.17995cd4.chunk.js  3.17995cd4.chunk.js.map  3.1b851d8d.chunk.js  3.1b851d8d.chunk.js.map  3.cfdb1a43.chunk.js  3.cfdb1a43.chunk.js.map  4.067f26c4.chunk.js  4.067f26c4.chunk.js.map  main.3946ed1c.chunk.js  main.3946ed1c.chunk.js.map  main.41d87ae8.chunk.js  main.41d87ae8.chunk.js.map  main.4f733258.chunk.js  main.4f733258.chunk.js.map  main.53ff53b9.chunk.js  main.53ff53b9.chunk.js.map  main.59725082.chunk.js  main.59725082.chunk.js.map  main.63276a5f.chunk.js  main.63276a5f.chunk.js.map  main.89e0abed.chunk.js  (+19 more)
tributi/: __init__.py  apps.py
tributi/admin/: __init__.py  iva_aliquota.py
tributi/managers/: iva_aliquota.py
tributi/migrations/: 0001_initial.py
tributi/models/: iva_aliquota.py
webapp/: settings.py  urls.py
webapp/settings/: __init__.py
webclient/: .eslintrc.json  apps.py  collectclient.py  package.json  urls.py  views.py  webpack.config.js
(+528 files in other folders)
