[tool.poetry]
name = "minigest"
version = "0.16.3"
description = "Un mini gestionale pensato per aiutare a mantenere i conti di un'azienda"
authors = ["Davide Di Criscito <davide.dicriscito@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ctrlmaniac/minigest"
homepage = "https://ctrlmaniac.github.io/minigest"
keywords = ["ERP", "django", "gestionale"]
classifier = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Intended Audience :: Developers",
    "Natural Language :: Italian",
    "Topic :: Office/Business"
]

[tool.poetry.scripts]
collectclient = "collectclient:run"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.16.3"
tag_format = "$major.$minor.$patch$prerelease"
bump_message = "docs:(release) $current_version → $new_version"
version_files = [
    "pyproject.toml:version",
    "lerna.json:version",
    "packages/www/package.json:version",
    "packages/docs/package.json:version"
]

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | dist
  | minigest/migrations
)/
'''

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
django-polymorphic = "^2.1.2"
pydash = "^4.8.0"
django-localflavor = "^3.0.1"
djangorestframework = "^3.11.0"
markdown = "^3.2.2"
django-filter = "^2.3.0"
django-rest-polymorphic = "^0.1.9"
drf-nested-routers = "^0.91"
django-weasyprint = "^1.0.1"
django-cors-headers = "^3.4.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"
django-split-settings = "^1.0.1"

[tool.poetry.dev-dependencies]
commitizen = "^1.23.0"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bugbear = "^20.1.4"
isort = { extras = ["pyproject"], version = "^4.3.21" }
pre-commit = "^2.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
