[tool.poetry]
name = "minigest"
version = "0.0.0"
description = "Un mini gestionale pensato per aiutare a mantenere i conti di un'azienda"
authors = ["Davide Di Criscito <davide.dicriscito@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ctrlmaniac/minigest"
homepage = "https://ctrlmaniac.github.io/minigest"
keywords = ["ERP", "django", "gestionale"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
tag_format = "$major.$minor.$patch$prerelease"
bump_message = "docs(release): $current_version → $new_version"
version_files = ["pyproject.toml:version"]

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | dist
  | minigest/migrations
)/
'''

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
commitizen = "^1.23.0"
black = { version = "^19.10b0", allow-prereleases = true }
pre-commit = "^2.6.0"
isort = "^5.0.7"
flake8 = "^3.8.3"
flake8-bugbear = "^20.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
